--- a/cdn/ui.css
+++ b/cdn/ui.css
@@ -3,43 +3,73 @@
 .ui-panel-container { width: 100%; position: fixed; left: 0; top: 0; bottom: 0; right: 0; background-color: rgba(230,233,237,0.8); z-index: 5; overflow: none; transform-style: preserve-3d; height: 100%; }
 .ui-panel-inline { right: 0; left: auto; background: transparent; }
 .ui-panel-inline .ui-panel { border-left: 1px solid #E0E0E0; background-color: rgba(255,255,255,0.9) }
-.ui-panel-header { height: 60px; }
-.ui-panel-body { overflow-scrolling: touch; overflow-y: auto; }
+.ui-panel-header { height: 50px; }
+.ui-panel-scroll { overflow-scrolling: touch; overflow-y: auto; }
 .ui-panel-animate .ui-panel { transform: scale(1); opacity: 1; }
 .ui-panel-inline.ui-panel-animate { transition: box-shadow 0.5s; box-shadow: -10px 0 20px rgba(0,0,0,0.02); }
-.ui-panel-title { padding: 0 0 0 20px; font-size: 16px; user-select: none; color: black; background-color: white; border-bottom: 1px solid #E0E0E0; position: absolute; left: 0; right: 0; top: 0; height: 60px; }
-.ui-panel-title .ui-panel-button-close { float: right; cursor: pointer; font-size: 18px; transition: all 0.2s; background: none; border: 0; outline: 0; height: auto; color: red; text-align: center; !important; padding: 0; width: auto; border-left: 1px solid #E0E0E0; width: 60px; height: 60px; }
+.ui-panel-title { padding: 0 0 0 20px; font-size: 14px; user-select: none; color: black; background-color: white; border-bottom: 1px solid #E0E0E0; position: absolute; left: 0; right: 0; top: 0; height: 50px; box-shadow: 0 5px 10px rgba(0,0,0,0.05); }
+.ui-panel-title .ui-panel-button-menu { float: right; cursor: pointer; font-size: 14px; transition: all 0.2s; background: none; border: 0; outline: 0; height: auto; color: gray; text-align: center; !important; padding: 0; width: auto; border: 0; width: 50px; height: 49px; }
+.ui-panel-title .ui-panel-button-menu:hover { color: black; transform: rotate(-90deg); }
+.ui-panel-title .ui-panel-button-close { float: right; cursor: pointer; font-size: 14px; transition: all 0.2s; background: none; border: 0; outline: 0; height: auto; color: red; text-align: center; !important; padding: 0; width: auto; border-left: 1px solid #E0E0E0; width: 50px; height: 49px; }
 .ui-panel-title .ui-panel-button-close:hover { background-color: #EB3324; color: white; }
-.ui-panel-title > span { font-weight: bold; max-width: 70%; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; position: relative; display: inline-block; vertical-align: middle; padding: 18px 0 0 0; }
-.ui-panel-title > .fa { margin: 19px 7px 0 0; float: left; }
+.ui-panel-title > span { font-weight: bold; max-width: 70%; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; position: relative; display: inline-block; vertical-align: middle; padding: 14px 0 0 0; }
+.ui-panel-title > i { margin: 17px 7px 0 0; float: left; }
 
-input:-ms-input-placeholder, input:-webkit-input-placeholder, input:-moz-input-placeholder { color: silver; }
-input[type="text"]:disabled, input[type="password"]:disabled, select:disabled { background-color: #F0F0F0; cursor: not-allowed; color: silver; }
+.ui-dark .ui-panel { background-color: #252525; }
+.ui-dark .ui-panel-title { color: white; background-color: #252525; border-bottom-color: #101010; }
+.ui-dark .ui-panel-container { background-color: rgba(30,30,30,0.8); }
+.ui-dark .ui-panel-inline { background-color: transparent; }
+.ui-dark .ui-panel-inline .ui-panel { border-left-color: #202020; background-color: rgba(40,40,40,0.9); }
+.ui-dark .ui-panel-button-close { border-left-color: #101010; }
+.ui-dark .ui-panel-title .ui-panel-button-menu:hover { color: white; }
+
+input:-ms-input-placeholder, input:-webkit-input-placeholder, input:-moz-input-placeholder { color: gray; }
+input[type="text"]:disabled, input[type="password"]:disabled { background-color: #F0F0F0; cursor: not-allowed; color: gray; }
 input:invalid { box-shadow: none; }
+.ui-right { text-align: right; }
+.ui-center { text-align: center; }
 
-.ui-textbox-container * { box-sizing: border-box; }
 .ui-textbox { height: 32px; border: 1px solid #E0E0E0; border-radius: 2px; position: relative; width: 100%; background-color: white; display: table; }
-.ui-textbox-input { display: table-cell; padding: 8px 2px 0 5px; }
-.ui-textbox-input input { font: normal 14px Arial; border: 0; outline: 0; color: black; width: 100%; background-color: white; margin: 0; padding: 0; appearance: none; border-radius: 0; vertical-align: top; }
+.ui-textbox-input { display: table-cell; padding: 7px 2px 0 5px; }
+.ui-textbox-input input { font: normal 14px Arial; border: 0; outline: 0; color: black; width: 100%; background-color: white; margin: 0; padding: 0; appearance: none; border-radius: 0; vertical-align: top; line-height: 12px; }
 .ui-textbox-control { position: relative; vertical-align: middle; display: table-cell; text-align: center; white-space: nowrap; text-overflow: clip; border-left: 1px solid #E0E0E0; width: 32px; color: black; }
 .ui-textbox .fa-times { color: red; cursor: pointer; }
-.ui-textbox-label { margin-bottom: 5px; font-size: 12px; text-align: left; }
-.ui-textbox-label .fa { margin-right: 5px; }
-.ui-textbox-label { margin-bottom: 5px; font-size: 12px; text-align: left; }
-.ui-textbox-label .fa { margin-right: 5px; }
+.ui-textbox-label { margin-bottom: 3px; font-size: 12px; text-align: left; }
+.ui-textbox-label i { margin-right: 3px; }
+.ui-textbox-innerlabel { position: relative; }
+.ui-textbox-innerlabel input { font-size: 12px; }
+.ui-textbox-innerlabel .ui-textbox-label { position: absolute; z-index: 1; margin: 9px 0 0 6px; }
+.ui-textbox-innerlabel.ui-textbox-filled .ui-textbox-label { margin: 2px 0 0 6px; font-size: 10px; color: #777777; }
+.ui-textbox-innerlabel.ui-textbox-filled .ui-textbox-label i { margin-right: 2px; }
+.ui-textbox-innerlabel.ui-textbox-filled input { padding-top: 6px; }
 .ui-textbox-required .ui-textbox-label { font-weight: bold; }
 .ui-textbox-required .ui-textbox-label:before { color: red; content: '***'; margin-right: 5px; }
+.ui-textbox-innerlabel.ui-textbox-required .ui-textbox-label:before { content: ''; margin: 0; }
 .ui-textbox-required .ui-textbox-control { border-color: #D0D0D0; }
 .ui-textbox-required .ui-textbox { border-color: #D0D0D0; }
 .ui-textbox-invalid .ui-textbox { border-color: #E1A1A1 !important; background-color: #FFF3F3 !important; }
 .ui-textbox-invalid input { background-color: #FFF3F3 !important; }
 .ui-textbox-invalid .ui-textbox-control { border-color: #E1A1A1 !important; }
 .ui-textbox .fa-caret-up, .ui-textbox .fa-caret-down { display: block; line-height: 9px; cursor: pointer; }
-.ui-textbox .fa-calendar { cursor: pointer; }
+.ui-textbox .fa-calendar, .ui-textbox .fa-eye, .ui-textbox .fa-eye-slash { cursor: pointer; }
 .ui-textbox-helper { margin-top: 8px; font-size: 11px; color: red; text-align: left; display: none; }
 .ui-textbox-helper-show { display: block; }
-.ui-textbox-container.ui-disabled .ui-textbox { background-color: #F0F0F0; cursor: not-allowed; }
+.ui-textbox-container.ui-disabled .ui-textbox { background-color: #F0F0F0; cursor: not-allowed; color: gray; }
 .ui-textbox-container.ui-disabled .ui-textbox input { background-color: #F0F0F0; }
+.ui-textbox-container.ui-disabled .ui-textbox-control { color: gray; }
 
-.ui-right { text-align: right; }
-.ui-center { text-align: center; }
+.ui-dark input:-ms-input-placeholder, .ui-dark input:-webkit-input-placeholder, .ui-dark input:-moz-input-placeholder { color: #707070; }
+.ui-dark input[type="text"]:disabled, .ui-dark input[type="password"]:disabled { background-color: #282828; color: #707070; }
+.ui-dark .ui-textbox { border-color: #383838; background-color: #202020; }
+.ui-dark .ui-textbox-input input { color: white; background-color: #202020; }
+.ui-dark .ui-textbox-control { border-left-color: #383838; color: #A0A0A0; }
+.ui-dark .ui-textbox .fa-times { color: red; }
+.ui-dark .ui-textbox-required .ui-textbox-label:before { color: red; }
+.ui-dark .ui-textbox-required .ui-textbox-control { border-color: #454545; }
+.ui-dark .ui-textbox-required .ui-textbox { border-color: #454545; }
+.ui-dark .ui-textbox-invalid .ui-textbox { border-color: red !important; background-color: #202020 !important; }
+.ui-dark .ui-textbox-invalid .ui-textbox input { background-color: #202020 !important; }
+.ui-dark .ui-textbox-invalid .ui-textbox-control { border-color: red !important; background-color: #202020 !important; }
+.ui-dark .ui-textbox-container.ui-disabled .ui-textbox { background-color: #282828; color: #777777; }
+.ui-dark .ui-textbox-container.ui-disabled .ui-textbox input { background-color: #282828; }
+.ui-dark .ui-textbox-container.ui-disabled .ui-textbox-control { color: #777777; }
