--- a/cdn/ui.css
+++ b/cdn/ui.css
@@ -84,3 +84,31 @@ input:invalid { box-shadow: none; }
 .ui-dark .ui-togglebutton button { background-color: #606060; border-color: #606060; color: #999999; }
 .ui-dark .ui-togglebutton-selected { background-color: #83B152; border-color: #7DA652; }
 .ui-dark .ui-togglebutton-selected button { background-color: white; color: black; }
+
+.ui-textarea { border: 1px solid #E0E0E0; padding: 0; border-radius: 2px; position: relative; display: block; width: 100%; background-color: white; overflow: hidden; }
+.ui-textarea textarea { border: 0; width: 100%; height: 100%; outline: 0; font: normal 14px Arial; color: black; resize: none; min-height: 50px; background-color: white; padding: 4px 5px; }
+.ui-textarea-label { margin-bottom: 3px; font-size: 12px; text-align: left; }
+.ui-textarea-label .fa { margin-right: 5px; }
+.ui-textarea-required .ui-textarea-label { font-weight: bold; }
+.ui-textarea-required .ui-textarea-label:before { color: red; content: '***'; margin-right: 5px; }
+.ui-textarea-required .ui-textarea { border-color: #D0D0D0; }
+.ui-textarea-invalid .ui-textarea { border-color: #E7B8B8 !important; background-color: #FFF3F3 !important; }
+.ui-textarea-invalid textarea { background-color: #FFF3F3 !important; }
+.ui-textarea-monospace textarea { font-family: monospace; font-size: 14px; }
+.ui-textarea-helper { margin-top: 8px; font-size: 11px; color: red; text-align: left; display: none; }
+.ui-textarea-helper-show { display: block; }
+.ui-disabled.ui-textarea { background-color: #F0F0F0; cursor: not-allowed; }
+.ui-disabled.ui-textarea textarea { background-color: #F0F0F0; color: gray; }
+.ui-disabled .ui-textarea { background-color: #F0F0F0; }
+.ui-disabled .ui-textarea textarea { background-color: #F0F0F0; cursor: not-allowed; color: gray; }
+
+.ui-dark .ui-textarea { border-color: #353535; background-color: #202020; }
+.ui-dark .ui-textarea textarea { color: white; background-color: #202020; }
+.ui-dark .ui-textarea-required .ui-textarea-label:before { color: red; }
+.ui-dark .ui-textarea-required .ui-textarea { border-color: #454545; }
+.ui-dark .ui-textarea-invalid .ui-textarea { border-color: red !important; background-color: #202020 !important; }
+.ui-dark .ui-textarea-invalid .ui-textarea textarea { background-color: #202020 !important; }
+.ui-dark .ui-disabled.ui-textarea { background-color: #282828; }
+.ui-dark .ui-disabled.ui-textarea textarea { background-color: #282828; color: #707070; }
+.ui-dark .ui-disabled .ui-textarea { background-color: #282828; }
+.ui-dark .ui-disabled .ui-textarea textarea { background-color: #282828; color: #707070; }
